[gd_scene load_steps=8 format=3 uid="uid://euvu0fs5nr55"]

[ext_resource type="Script" uid="uid://bvxl52l60nmm2" path="res://scripts/jumpscare_manager.gd" id="1_k1t4k"]
[ext_resource type="FontFile" uid="uid://b8pgtq248qfvd" path="res://assets/Fonts/TeenyTinyPixls-o2zo.ttf" id="2_u1tqw"]

[sub_resource type="LabelSettings" id="LabelSettings_boanj"]
font = ExtResource("2_u1tqw")
font_size = 121
font_color = Color(0, 1, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7weg7"]
bg_color = Color(0, 1, 0, 1)

[sub_resource type="Animation" id="Animation_ob8ot"]
resource_name = "progress"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rebootBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 100.0]
}

[sub_resource type="Animation" id="Animation_i2gqa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rebootBar:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [100.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odlwg"]
_data = {
&"RESET": SubResource("Animation_i2gqa"),
&"progress": SubResource("Animation_ob8ot")
}

[node name="JumpscareManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_k1t4k")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
expand = true

[node name="rebootScreen" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="rebootScreen"]
layout_mode = 0
offset_left = 144.0
offset_top = 148.0
offset_right = 1015.0
offset_bottom = 294.0
text = "REBOOTING"
label_settings = SubResource("LabelSettings_boanj")

[node name="rebootBar" type="ProgressBar" parent="rebootScreen"]
layout_mode = 0
offset_left = 165.0
offset_top = 402.0
offset_right = 971.0
offset_bottom = 480.0
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_7weg7")
value = 100.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="rebootScreen"]
libraries = {
&"": SubResource("AnimationLibrary_odlwg")
}

[node name="rebootTimer" type="Timer" parent="rebootScreen"]
wait_time = 2.5
one_shot = true

[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
[connection signal="timeout" from="rebootScreen/rebootTimer" to="." method="_on_reboot_timer_timeout"]
